syntax = "proto3";

package theme;

message ColorCode {
  string name = 1;
  string hex_color = 2;
}

message Theme {
  string name = 1;
  string description = 2;
  repeated ColorCode color_codes = 3;
}

message ListRequest {
}
message ListResponse {
  repeated Theme themes = 1;
}

message RemoveRequest {
  string name = 1;
}
message RemoveResponse {}

message AddRequest {
  string name = 1;
  string description = 2;
  repeated ColorCode color_codes = 3;
}
message AddResponse {
  Theme theme = 1;
}